--- a/assets/sass/_variables.sass
+++ b/assets/sass/_variables.sass
@@ -14,7 +14,7 @@ $secondary-font-color: #95a0a0
 $terminal-color: #0d2a34 //#000
 $arrow-color: #40E800
 $username-color: #56F2E6
-$dock-menu-background: rgba(83, 83, 83, 0.25)
+$dock-menu-background: rgba(83, 83, 83, 0.45)
 $menubar-font-color: rgba(255, 255, 255, 0.95)
 $background-gradient: radial-gradient($background-color, $foreground-color 120%)
 
