--- a/assets/sass/dock.sass
+++ b/assets/sass/dock.sass
@@ -18,8 +18,7 @@ footer
   justify-content: center
 
 .dock
-  @include mix.blur(13px)
-  background: vars.$dock-menu-background
+  @include mix.blur(13px, vars.$dock-menu-background)
   border: 1px solid rgba(255, 255, 255, 0.05)
   padding: $padding
   border-radius: $dock-border-radius
